fixed news page spacing, updated events page

--- a/src/pages/styles/News.css
+++ b/src/pages/styles/News.css
@@ -8,7 +8,7 @@
     justify-content: center;
     display: flex;
     flex-wrap: wrap;
-    gap: 5rem;
+    gap: 6rem;
   }
 
   .news-card-container.home {
